@@ -1,3 +1,13 @@
+2021-08-07  Bruno Haible  <bruno@clisp.org>
+
+	Make gl_INIT_PACKAGE work with Automake >= 1.16.4.
+	Reported and analyzed by Nicole Mazzuca <mazzucan@outlook.com> in
+	<https://lists.gnu.org/archive/html/bug-libunistring/2021-08/msg00002.html>.
+	* m4/init-package-version.m4 (gl_INIT_PACKAGE): Use a new macro
+	gl_INIT_EMPTY.
+	(gl_INIT_DUMMY): Expand to empty in two steps, via a new macro
+	gl_INIT_DUMMY2.
+
 2021-07-25  Bruno Haible  <bruno@clisp.org>
 
 	u{8,16,32}-uctomb: Avoid possible trouble with huge strings.
